--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2024"
 actix-web = { version = "4.11.0", features = ["macros"] }
 dotenv = "0.15.0"
 jsonwebtoken = "9.3.1"
-serde = "1.0.219"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
-sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "macros", "postgres"] }
+sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "time"] }
 tokio = { version = "1.45.1", features = ["full"] }
 argon2 = "0.5"
 password-hash = "0.5"
 rand_core = "0.6"
 chrono = { version = "0.4", features = ["serde"] }
+time = { version = "0.3", features = ["serde"] } # 新增
