--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 actix-web = { version = "4.11.0", features = ["macros"] }
+futures-util = "0.3"
 dotenv = "0.15.0"
 jsonwebtoken = "9.3.1"
 serde = { version = "1.0.219", features = ["derive"] }
@@ -15,4 +16,6 @@ argon2 = "0.5"
 password-hash = "0.5"
 rand_core = "0.6"
 chrono = { version = "0.4", features = ["serde"] }
-time = { version = "0.3", features = ["serde"] } # 新增
+time = { version = "0.3", features = ["serde"] } 
+actix-cors = "0.7"
+
